manifests/hetzner/observability/prometheus/httproute-prometheus.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-public
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: observability
    sectionName: websecure-prometheus
  hostnames:
  - prometheus.infra.techwerkers.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2
    backendRefs:
    - name: oauth2-proxy
      group: ""
      kind: Service
      namespace: oauth2-proxy
      port: 80
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: prometheus-operated
      port: 9090
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: oauth-chain
